<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.example.coupons.common.entities.CouponEntity" />

        <variable
            name="viewModel"
            type="com.example.coupons.mainModule.viewModel.MainViewModel" />

        <variable
            name="isActive"
            type="boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/common_padding_xlarge"
        android:paddingVertical="@dimen/common_padding_default"
        tools:context=".mainModule.view.MainActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnConsult"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()-> viewModel.consultCouponByCode()}"
            android:text="@string/main_button_consult"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnCreate" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreate"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()-> viewModel.saveCoupon()}"
            android:text="@string/main_button_create"
            app:isGone="@{isActive}"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintEnd_toStartOf="@id/btnConsult"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_text_title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:textTitle="@{isActive}" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_coupon"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_padding_default"
            android:hint="@string/main_hint_coupon"
            app:layout_constraintBottom_toTopOf="@+id/btnConsult"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCoupon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/main_hint_coupon"
                android:text="@={viewModel.coupon.code}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="@{!isActive}"
            android:hint="@{isActive ? @string/main_hint_active : @string/main_hint_description}"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toTopOf="@+id/til_coupon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/main_hint_description"
                android:text="@={viewModel.coupon.description}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                tools:text="Cupón válido por 10% en compras mayores a 10 USD" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>